# Simple-Car-Game

./: .gitignore  CMakeLists.txt  Clock.h  Game.h  README.md  Sprites.cpp  update.cpp
src/: Animation.cpp  Clock.cpp  Game.cpp  Obstacles.cpp  Obstacles.h  Sprites.cpp  Sprites.h  Update.h  update.cpp
src/cpp/: Collision.cpp  Event.cpp  Game.cpp  Obstacles.cpp  main.cpp
src/def/: Animation.cpp  Clock.cpp  Collision.cpp  Event.cpp  Game.cpp  Obstacles.cpp  Sprites.cpp  main.cpp  update.cpp
src/headers/: Animation.h  Global.h
src/includes/: Collision.h  Event.h
